Fix button alignment in form

--- a/HairSalon.Solution/HairSalon/wwwroot/css/styles.css
+++ b/HairSalon.Solution/HairSalon/wwwroot/css/styles.css
@@ -36,16 +36,19 @@ label {
 }
 
 input {
-  margin: 10px;
+  margin-left: auto;
+  margin-right: auto;
   width: 15em;
 }
 
 input[type=submit] {
   display: block;
-  margin: 10px;
+  margin-top: 1em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2em;
   white-space: pre-line;
 }
-
 
 .content {
   background-color: rgba(220, 220, 220, 0.767);
